# api/docs/swagger.json
@@ -17,7 +17,7 @@
                     "Book"
                 ],
                 "summary": "Get List Book",
-                "operationId": "Get_List_Book",
+                "operationId": "BookPrimeryKey",
                 "parameters": [
                     {
                         "type": "integer",
@@ -34,9 +34,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "GetListBookBody",
+                        "description": "GetBookListBody",
                         "schema": {
-                            "$ref": "#/definitions/models.GetListBookRequest"
+                            "$ref": "#/definitions/models.GetListBookResponse"
                         }
                     },
                     "400": {
@@ -54,7 +54,7 @@
                 }
             },
             "post": {
-                "description": "Create Book",
+                "description": "CreateBook",
                 "consumes": [
                     "application/json"
                 ],
@@ -64,24 +64,24 @@
                 "tags": [
                     "Book"
                 ],
-                "summary": "Create Book",
-                "operationId": "create_Book",
+                "summary": "CreateBook",
+                "operationId": "CreateBook",
                 "parameters": [
                     {
                         "description": "CreateBookRequestBody",
-                        "name": "Book",
+                        "name": "book",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.PutBook"
+                            "$ref": "#/definitions/models.CreateBook"
                         }
                     }
                 ],
                 "responses": {
                     "201": {
-                        "description": "GetBookryBody",
+                        "description": "GetBookBody",
                         "schema": {
-                            "$ref": "#/definitions/models.CreateBook"
+                            "$ref": "#/definitions/models.Book"
                         }
                     },
                     "400": {
@@ -126,7 +126,7 @@
                     "201": {
                         "description": "GetByIDBookBody",
                         "schema": {
-                            "$ref": "#/definitions/models.BookPrimeryKey"
+                            "$ref": "#/definitions/models.Book"
                         }
                     },
                     "400": {
@@ -144,7 +144,7 @@
                 }
             },
             "put": {
-                "description": "Update_Book",
+                "description": "Update Book",
                 "consumes": [
                     "application/json"
                 ],
@@ -154,8 +154,8 @@
                 "tags": [
                     "Book"
                 ],
-                "summary": "Update_Book",
-                "operationId": "Update_Book",
+                "summary": "Update Book",
+                "operationId": "UpdateBook",
                 "parameters": [
                     {
                         "type": "string",
@@ -165,12 +165,12 @@
                         "required": true
                     },
                     {
-                        "description": "UpdateBookResquestBody",
+                        "description": "UpdateBookRequestBody",
                         "name": "book",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.PutBook"
+                            "$ref": "#/definitions/models.UpdateBookSwag"
                         }
                     }
                 ],
@@ -178,7 +178,7 @@
                     "202": {
                         "description": "UpdateBookBody",
                         "schema": {
-                            "$ref": "#/definitions/models.PutBook"
+                            "$ref": "#/definitions/models.Book"
                         }
                     },
                     "400": {
@@ -207,7 +207,7 @@
                     "Book"
                 ],
                 "summary": "Delete Book",
-                "operationId": "Delete_Book",
+                "operationId": "DeleteBook",
                 "parameters": [
                     {
                         "type": "string",
@@ -219,7 +219,7 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "DeleteBookyBody",
+                        "description": "DeleteBookBody",
                         "schema": {
                             "$ref": "#/definitions/models.Empty"
                         }
@@ -476,32 +476,22 @@
         }
     },
     "definitions": {
-        "models.BookPrimeryKey": {
+        "models.Book": {
             "type": "object",
             "properties": {
-                "id": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Category": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
+                "categories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Category1"
+                    }
                 },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.CreateBook": {
-            "type": "object",
-            "properties": {
                 "created_at": {
                     "type": "string"
                 },
                 "description": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "string"
                 },
                 "name": {
@@ -515,9 +505,98 @@
                 }
             }
         },
+        "models.Category": {
+            "type": "object",
+            "properties": {
+                "categories": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CategoryBook"
+                    }
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Category1": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CategoryBook": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateBook": {
+            "type": "object",
+            "properties": {
+                "category_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                }
+            }
+        },
         "models.CreateCategory": {
             "type": "object",
             "properties": {
+                "books_id": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "name": {
                     "type": "string"
                 }
@@ -526,13 +605,16 @@
         "models.Empty": {
             "type": "object"
         },
-        "models.GetListBookRequest": {
+        "models.GetListBookResponse": {
             "type": "object",
             "properties": {
-                "limit": {
-                    "type": "integer"
+                "books": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Book"
+                    }
                 },
-                "offset": {
+                "count": {
                     "type": "integer"
                 }
             }
@@ -540,7 +622,7 @@
         "models.GetListCategoryResponse": {
             "type": "object",
             "properties": {
-                "Categorys": {
+                "categories": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.Category"
@@ -551,7 +633,7 @@
                 }
             }
         },
-        "models.PutBook": {
+        "models.UpdateBookSwag": {
             "type": "object",
             "properties": {
                 "description": {
